spec/hecate/core/renderer/__snapshots__/tty/narrow_terminal.snap
error: too many parameters
  --> width.cr:1:31
  |
1 | function calculateComplexValue(parameter1, parameter2, parameter3) { return parameter1 + parameter2 * parameter3; }
  |                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ consider using an options object
  |
